# rust-rss2email

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
src/: main.rs
